# piscine-data-science

./: .gitignore  README.md
python00/ex00/: Hello.py
python00/ex01/: format_ft_time.py
python00/ex02/: find_ft_type.py  old.py  tester.py
python00/ex03/: NULL_not_found.py
python00/ex04/: whatis.py
python00/ex05/: building.py
python00/ex06/: filterstring.py  ft_filter.py
python00/ex07/: sos.py
python00/ex08/: Loading.py
python00/ex09/: LICENSE  README.md  pyproject.toml
python00/ex09/src/ft_package/: count_in_list.py
python01/ex01/: array2D.py
python01/ex03/: load_image.py  zoom.py
python01/ex04/: rotate.py
python01/ex05/: load_image.py
python01/python01/Ressources/: animal.test
python01/python01/ex00/: give_bmi.py
python01/python01/ex02/: load_image.py
python01/python01/ex03/: zoom.py
python01/python01/ex04/: rotate.py
python01/python01/ex05/: pimp_image.py
python01/tester/: tester05.py
python02/ex00/: load_csv.py
python02/ex01/: aff_life.py
python02/ex02/: aff_pop.py
python02/ex03/: load_csv.py  projection_life.py
python03/ex00/: S1E9.py  tester00.py
python03/ex01/: S1E7.py  S1E9.py
python03/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
python03/ex03/: ft_calculator.py
python03/ex04/: ft_calculator.py
python03/tester/: tester01.py
python04/ex00/: statistics.py
python04/ex01/: in_out.py
python04/ex02/: callLimit.py
python04/ex03/: new_student.py
